feat: сверстать шапку

--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
     <title>Space X - landing</title>
     <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body>
-    
+<body class="content">
+    <div class="page">
+
+    <header class="header">
+        <img class="header__logo" src="./images/header-logo.svg" alt="Space-X logo">
+        <nav class="header__container">
+            <ul class="header__menu">
+                <li><a href="#" class="header__link">Falcon 9</a></li>
+                <li><a href="#" class="header__link">Falcon Heavy</a></li>
+                <li><a href="#" class="header__link">Dragon</a></li>
+                <li><a href="#" class="header__link">Updates</a></li>
+            </ul>
+            </nav>
+        <nav class="header__container">
+            <ul class="header__menu-side">
+                <li><a href="#" class="header__link-side">About</a></li>
+                <li><a href="#" class="header__link-side">Gallery</a></li>
+                <li><a href="#" class="header__link-side">Shop</a></li>
+            </ul>
+            </nav>
+    </header>
+
+</div>
 </body>
 </html>
