feat: сверстать секцию1 мэйна

--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
             </nav>
     </header>
 
+    <main>
+      <section class="intro" aria-label="Introduction">
+        <h1 class="intro__title">Falcon Heavy</h1>
+        <p class="intro__description">the most powerful operational rocket in the world by a factor of two</p>
+        <div class="intro__line-item"></div>
+        <img class="intro__image" src="./images/earth-image.svg" alt="Planet Earth image">
+      </section>
+
+    </main>
+
 </div>
 </body>
 </html>
