feat: сверстать вторую секцию мэйна

--- a/index.html
+++ b/index.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Space-X Макет Figma для самостоятельной верстки">
-    <meta name="keywords" content="веб-разработка, html, css">
-    <meta name="author" content="Ольга Помыткина">
-    <title>Space X - landing</title>
-    <link rel="stylesheet" href="./pages/index.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Space-X Макет Figma для самостоятельной верстки">
+  <meta name="keywords" content="веб-разработка, html, css">
+  <meta name="author" content="Ольга Помыткина">
+  <title>Space X - landing</title>
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
+
 <body class="content">
-    <div class="page">
+  <div class="page">
 
     <header class="header">
-        <img class="header__logo" src="./images/header-logo.svg" alt="Space-X logo">
-        <nav class="header__container">
-            <ul class="header__menu">
-                <li><a href="#" class="header__link">Falcon 9</a></li>
-                <li><a href="#" class="header__link">Falcon Heavy</a></li>
-                <li><a href="#" class="header__link">Dragon</a></li>
-                <li><a href="#" class="header__link">Updates</a></li>
-            </ul>
-            </nav>
-        <nav class="header__container">
-            <ul class="header__menu-side">
-                <li><a href="#" class="header__link-side">About</a></li>
-                <li><a href="#" class="header__link-side">Gallery</a></li>
-                <li><a href="#" class="header__link-side">Shop</a></li>
-            </ul>
-            </nav>
+      <img class="header__logo" src="./images/header-logo.svg" alt="Space-X logo">
+      <nav class="header__container">
+        <ul class="header__menu">
+          <li><a href="#" class="header__link">Falcon 9</a></li>
+          <li><a href="#" class="header__link">Falcon Heavy</a></li>
+          <li><a href="#" class="header__link">Dragon</a></li>
+          <li><a href="#" class="header__link">Updates</a></li>
+        </ul>
+      </nav>
+      <nav class="header__container">
+        <ul class="header__menu-side">
+          <li><a href="#" class="header__link-side">About</a></li>
+          <li><a href="#" class="header__link-side">Gallery</a></li>
+          <li><a href="#" class="header__link-side">Shop</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
@@ -40,8 +42,38 @@
         <img class="intro__image" src="./images/earth-image.svg" alt="Planet Earth image">
       </section>
 
+      <section class="rocket" aria-label="Rocket description">
+        <div class="rocket__first-section">
+          <h2 class="rocket__title">FALCON HEAVY OVERVIEW</h2>
+          <div class="rocket__second-section">
+          <ul class="rocket__params">
+            <li class="rocket__param"><a>HEIGHT</a></li>
+            <li class="rocket__param"><a>DIAMETER</a></li>
+            <li class="rocket__param"><a>MASS</a></li>
+            <li class="rocket__param"><a>PAYLOAD TO LEO</a></li>
+            <li class="rocket__param"><a>PAYLOAD TO GTO</a></li>
+            <li class="rocket__param"><a>PAYLOAD TO MARS</a></li>
+          </ul>
+          <ul class="rocket__values">
+            <li class="rocket__value"><a>70 m /</a><a class="rocket__value-second"> 229.6 ft</a></li>
+            <li class="rocket__value"><a>12.2 m /</a><a class="rocket__value-second"> 39.9 ft</a></li>
+            <li class="rocket__value"><a>1,420,788 kg /</a><a class="rocket__value-second"> 3,125,735 lb</a></li>
+            <li class="rocket__value"><a>63,800 kg /</a><a class="rocket__value-second"> 140,660 lb</a></li>
+            <li class="rocket__value"><a>26,700 kg /</a><a class="rocket__value-second"> 58,860 lb</a></li>
+            <li class="rocket__value"><a>16,800 kg /</a><a class="rocket__value-second"> 37,040 lb</a></li>
+          </ul>
+        </div>
+        <article>
+          <h2 class="rocket__title">UNMATCHED PERFORMANCE</h2>
+          <p class="rocket__description">With more than 5 million pounds of thrust at liftoff, Falcon Heavy is the most capable rocket flying. By comparison, the liftoff thrust of the Falcon Heavy equals approximately eighteen 747 aircraft at full power. Falcon Heavy can lift the equivalent of a fully loaded 737 jetliner—complete with passengers, luggage and fuel—to orbit.</p>
+        </article>
+      </div>
+        <img class="rocket__image" src="./images/rocket-image.svg" alt="Space X rocket image">
+      </section>
+
     </main>
 
-</div>
+  </div>
 </body>
+
 </html>
