feat: сверстать футер

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="page">
 
     <header class="header">
-      <img class="header__logo" src="./images/header-logo.svg" alt="Space-X logo">
+      <img class="header__logo" src="./images/spacex-logo.svg" alt="Space-X logo">
       <nav class="header__container">
         <ul class="header__menu">
           <li><a href="#" class="header__link">Falcon 9</a></li>
@@ -72,6 +72,23 @@
       </section>
 
     </main>
+
+    <footer class="footer">
+      <img class="footer__logo" src="./images/spacex-logo.svg" alt="Space-X logo">
+      <nav>
+        <ul class="footer__menu">
+          <li class="footer__menu-item"><a class="footer__link" href="#">Twitter</a></li>
+          <li class="footer__menu-item"><a class="footer__link" href="#">Youtube</a></li>
+          <li class="footer__menu-item"><a class="footer__link" href="#">Instagram</a></li>
+          <li class="footer__menu-item"><a class="footer__link" href="#">Flickr</a></li>
+          <li class="footer__menu-item"><a class="footer__link" href="#">LinkedIn</a></li>
+          <li class="footer__menu-item"><a class="footer__link" href="#">Privacy</a></li>
+          <li class="footer__menu-item"><a class="footer__link" href="#">Policy</a></li>
+        </ul>
+      </nav>
+      <p class="footer__info">For additional questions, contact rideshare@spacex.com</p>
+      <button class="footer__button" type="button">Contact us</button>
+    </footer>
 
   </div>
 </body>
