--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h1 class="intro__title">Falcon Heavy</h1>
         <p class="intro__description">the most powerful operational rocket in the world by a factor of two</p>
         <div class="intro__line-item"></div>
-        <img class="intro__image" src="./images/earth-image.svg" alt="Planet Earth image">
+        <img class="intro__image rotation" src="./images/earth-image.svg" alt="Planet Earth image">
       </section>
 
       <section class="rocket" aria-label="Rocket description">
